[tool.poetry]
name = "organizador"
version = "0.1.0"
description = "Programa que organiza sua pasta download"
authors = ["Lucas-Brito-Dev <lucasbrito_dev@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
